# OctFractalGen

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml  run_remote.sh
docs/: COARSE_FINE_README.md  experiment_report.md  exploration_path.md  milestone.tex
experiments/: .gitignore
experiments/configs/: coarse_fine_airplane_planb.yaml  coarse_fine_octgpt_airplane.yaml  fractal_base_airplane.yaml  fractal_base_airplane_remote.yaml  fractal_tiny_airplane.yaml  octgpt_baseline_airplane.yaml
scripts/: audit_dataset_equivalence.py  diag_octgpt_official_path.py  diag_overfit.py  diag_overfit_coarse_fine.py  diag_overfit_octgpt.py  diag_vqvae_recon.py  diag_vqvae_strict.py  diag_vqvae_subnode.py  init_coarse_fine_from_octgpt.py  preprocess_shapenet.py  test_coarse_fine_generate.py
src/: config.py  evaluate.py  generate.py  train.py  train_ddp.py  train_remote.py
src/data/: shapenet.py
src/model/: ar_octree.py  fractal_octgpt.py  fractal_octree.py  fractal_octree_remote.py  grouped_fractal_octgpt.py  octgpt_layer.py  octree_ar.py  octree_ar_remote.py  transformer.py  vqvae_wrapper.py
src/utils/: mesh.py  metrics.py  octree_ops.py  train_metrics.py
